add scoop in run_once_wondows

--- a/run_once_10-windows-desktop.ps1.tmpl
+++ b/run_once_10-windows-desktop.ps1.tmpl
@@ -1,5 +1,6 @@
 {{- if eq .chezmoi.os "windows" }}
 
+scoop bucket add extras versions noneportable
 scoop install cloc cmake curl everything fzf geekuninstaller googlechrome grep mobaxterm motrix neovim pwsh python snipaste sudo vim windows-terminal wiztree
 
 {{- end }}
