--- a/run_once_10-windows-desktop.ps1.tmpl
+++ b/run_once_10-windows-desktop.ps1.tmpl
@@ -1,6 +1,8 @@
 {{- if eq .chezmoi.os "windows" }}
 
-scoop bucket add extras versions noneportable
+scoop bucket add extras
+scoop bucket add versions
+scoop bucket add noneportable
 scoop install cloc cmake curl everything fzf geekuninstaller googlechrome grep mobaxterm motrix neovim pwsh python snipaste sudo vim windows-terminal wiztree
 
 {{- end }}
